# AI_Marketing_Campaign_Orchestrator

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
config/: agent.yaml  task.yaml
marketing_outputs/: blog_post.md  content_calendar.md  executive_summary.md  seo_keywords.txt  social_posts.txt
marketing_outputs1/: content_calendar.md  market_research_report.md  seo_keywords.md  social_media_posts.md
